Add support for publishing maven-metadata.xml
Maven repositories normally have a maven-metadata.xml file that indicate to the Maven system what versions are available and which is to be considered the latest version.

```xml
<metadata modelVersion="1.1.0">
    <groupId>com.mycompany.app</groupId>
    <artifactId>my-app</artifactId>
    <versioning>
        <latest>1.0</latest>
        <release>1.0</release>
        <versions>
            <version>1.0</version>
        </versions>
        <lastUpdated>20200731090423</lastUpdated>
    </versioning>
</metadata>
```

At Confluent, we use AWS Code Artifactory which does not mark a Maven package as "published" unless a new maven-metadata.xml is uploaded indicating so.

Add support for reading existing maven-metadata.xml
Add support for adding the new version to the metadata object
Add support to upload the file for http, file, s3 protocols

Co-authored-by: Farid Zakaria <fzakaria@confluent.io>
Co-authored-by: Na Lou <nlou@confluent.io>